--- a/style.css
+++ b/style.css
@@ -233,3 +233,64 @@ hr{
 	}
 }
 
+/* Responsive for mobile */
+@media(max-width: 768px){
+	.container{
+		width: 85%;
+	}
+	.header p{
+		font-size: 9px;
+	}
+	.heading{
+		font-size: 20px;
+		padding: 10px;
+	}
+	.sub-header{
+		margin: 10px 0;
+		height: 115px;
+	}
+	.service{
+		padding: 10px 0;
+	}
+	.service h6{
+		font-size: 8px;
+	}
+	.service p{
+		font-size: 8px;
+	}
+	.ministry h6{
+		font-size: 8px;
+	}
+	.ministry p{
+		font-size: 8px;
+	}
+	.hero-section{
+		height: 145px;
+	}
+	.bottom-section{
+		margin: 10px 0;
+	}
+	.text h2{
+		font-size: 0.7rem;
+	}
+	.text p{
+		font-size: 0.45rem;
+		line-height: 1.2em;
+	}
+	.image img{
+		width: 100%;
+		height: 80px;
+	}
+	.pastor-info{
+		padding: 10px 0px;
+	}
+	.pastor-info h6{
+		font-size: 0.55rem;
+	}
+	.pastor-info p{
+		font-size: 7px;
+	}
+	.footer{
+		font-size: 0.6rem;
+	}
+}
